tests/vertical-slice/reject/const_ref_forward.hew
const B: i64 = A + 1;
const A: i64 = 10;

fn main() -> i64 {
    B
}
